--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
 	"engines": {
 		"node": ">=20.0.0"
 	},
-	"dependencies": {},
+	"dependencies": {
+		"@juanibiapina/pi-extension-settings": "^0.4.0"
+	},
 	"peerDependencies": {
 		"@mariozechner/pi-coding-agent": "*",
 		"@mariozechner/pi-tui": "*"
